# signal-labs_function-plotting

./: CMakeLists.txt  README.md  TurbinaSzczescia.cpp
